# databricks-automated-tagging

./: README.md  pyproject.toml
src/databricks_automated_tagger/: __init__.py  autotagger.py
